--- a/index.css
+++ b/index.css
@@ -1,1 +1,20 @@
+body {
+  background: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+}
 
+
+h1 {
+  font-size: 50px;
+  align: center;
+}
+
+button {
+  width: 100px;
+  height: 40px;
+}
