--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
 
 
 h1 {
-  font-size: 150px;
+  font-size: 250px;
   align: center;
   color: white;
 }
@@ -18,4 +18,5 @@ h1 {
 button {
   width: 500px;
   height: 400px;
+  font-size: 100;
 }
